section spacing fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -143,7 +143,7 @@ img {
 
 /*==================== REUSABLE CSS CLASSES ====================*/
 .section {
-    padding: 1rem 0 0;
+    padding: 1rem 0 4rem;
   }
   
   .section__title {
